Add NLP solutions

--- a/1_nlp/part_I_text_classification/Transformer_Encoder_Classification_solved.ipynb
+++ b/1_nlp/part_I_text_classification/Transformer_Encoder_Classification_solved.ipynb
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "5GcxgGKuH1it"
       },
@@ -197,7 +197,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -647,7 +647,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -729,7 +729,7 @@
         "id": "BWlFipMxK8O1",
         "outputId": "75bcacef-b3cd-43b8-ff3f-037ca30946c2"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -770,7 +770,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -886,7 +886,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "Jh9XOfk8H8in"
       },
@@ -928,7 +928,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "1KF6yOcdICzN"
       },
@@ -968,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "55kGha23IGn0"
       },
@@ -993,10 +993,10 @@
         "            optimizer.zero_grad()\n",
         "\n",
         "            # EXERCISE: Forward pass, pass the inputs and the attention_mask\n",
-        "            outputs = model(input_ids, attention_mask.to(torch.float))\n",
+        "            outputs = model(input_ids.to('cuda'), attention_mask.to('cuda'))\n",
         "\n",
         "            # EXERCISE: Compute loss\n",
-        "            loss = criterion(outputs, labels)\n",
+        "            loss = criterion(outputs, labels.to('cuda'))\n",
         "\n",
         "            # EXERCISE: Backward pass and optimization step\n",
         "            loss.backward()\n",
@@ -1014,7 +1014,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "9Lxq89uNIL4y"
       },
@@ -1031,14 +1031,14 @@
         "            input_ids, attention_mask, labels = batch\n",
         "\n",
         "            # EXERCISE: Forward pass with masks\n",
-        "            outputs = model(input_ids, attention_mask)\n",
+        "            outputs = model(input_ids.to('cuda'), attention_mask.to('cuda'))\n",
         "\n",
         "            # Get predictions\n",
         "            _, predicted = torch.max(outputs, 1)\n",
         "\n",
         "            # Update accuracy\n",
         "            total += labels.size(0)\n",
-        "            correct += (predicted == labels).sum().item()\n",
+        "            correct += (predicted == labels.to('cuda')).sum().item()\n",
         "\n",
         "    # EXERCISE: compute the total accuracy\n",
         "    accuracy = correct / total\n",
@@ -1047,7 +1047,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1109,7 +1109,7 @@
         "embedding_dim = 64\n",
         "output_dim = 2  # Binary classification\n",
         "\n",
-        "simple_model = SimpleModel(vocab_size, embedding_dim, output_dim)\n",
+        "simple_model = SimpleModel(vocab_size, embedding_dim, output_dim).to('cuda')\n",
         "\n",
         "params = sum(p.numel() for p in simple_model.parameters() if p.requires_grad)\n",
         "print(f'The model has {params} parameters')\n",
@@ -1135,7 +1135,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "0zWvzxD_I4hm"
       },
@@ -1171,7 +1171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "O_HM31Lfw-u2"
       },
@@ -1241,7 +1241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "WGrGgebTw_mQ"
       },
@@ -1294,7 +1294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "F_lCluW2xqs6"
       },
@@ -1366,7 +1366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1430,7 +1430,7 @@
         "    num_layers=num_layers,\n",
         "    d_ff=4*embedding_dim,\n",
         "    output_dim=output_dim\n",
-        ")\n",
+        ").to('cuda')\n",
         "\n",
         "params = sum(p.numel() for p in bert_model.parameters() if p.requires_grad)\n",
         "print(f'The model has {params} parameters')\n",
